--- a/package.json
+++ b/package.json
@@ -27,12 +27,19 @@
 	"types": "./dist/index.d.ts",
 	"files": ["dist"],
 	"type": "commonjs",
+	"sideEffects": false,
 	"exports": {
-		"./package.json": "./package.json",
 		".": {
-			"import": "./dist/index.mjs",
-			"default": "./dist/index.js"
-		}
+			"import": {
+				"types": "./dist/index.d.mts",
+				"default": "./dist/index.mjs"
+			},
+			"require": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			}
+		},
+		"./package.json": "./package.json"
 	},
 	"bugs": {
 		"url": "https://github.com/CeriosTesting/xml-poto/issues"
