--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"xmlroot",
 		"xmlelement",
 		"xmlattribute",
-		"cerios"
+		"cerios",
+		"xbrl",
+		"bi-directional"
 	],
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
