--- a/package.json
+++ b/package.json
@@ -63,23 +63,22 @@
 		"dev": "tsc --watch",
 		"lint": "biome lint",
 		"prepare": "husky",
-		"test": "jest",
-		"test:coverage": "jest --coverage",
-		"test:watch": "jest --watch",
+		"test": "vitest",
+		"test:coverage": "vitest --coverage",
+		"test:watch": "vitest --watch",
 		"update-all-packages": "npx npm-check-updates -u && npm i"
 	},
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.18.2",
 		"@biomejs/biome": "2.3.6",
 		"@changesets/cli": "^2.29.7",
-		"@types/jest": "^29.5.5",
 		"@types/node": "^24.10.1",
+		"@vitest/ui": "^2.1.2",
 		"husky": "^9.1.7",
-		"jest": "^29.7.0",
 		"lint-staged": "^16.2.6",
 		"npm-check-updates": "^19.1.2",
-		"ts-jest": "^29.4.5",
 		"tsup": "^8.5.1",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"vitest": "^2.1.2"
 	}
 }
