add publishing of tags

--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"biome:migrate": "biome migrate --write",
 		"build": "tsup",
 		"changeset": "npx changeset",
-		"changeset:publish": "tsup && changeset publish",
 		"changeset:version": "changeset version && npm i",
+		"changeset:publish": "tsup && changeset publish && git push --follow-tags",
 		"check": "biome check --write",
 		"check-exports": "attw --pack .",
 		"compile": "tsc --noEmit",
