--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,27 +5,5 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: "npm"
-
-      - name: Install dependencies
-        run: |
-          npm ci
-
-      - name: Build
-        run: npm run compile
-
-      - name: Lint code
-        run: npm run lint
-
-      - name: Run tests
-        run: npm run test
+  ci:
+    uses: ./.github/workflows/ci.yml
