--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: npm run changeset:publish
+          createGithubReleases: true
           title: "chore: release packages"
           commit: "chore: release packages"
         env:
