--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,42 +1,55 @@
 name: Release
 
 on:
-  workflow_dispatch:
-
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+  workflow_dispatch: {}
 
 permissions:
   contents: write
-  pull-requests: write
   id-token: write
+  packages: write
+  pull-requests: write
 
 jobs:
-  ci:
-    uses: ./.github/workflows/ci.yml
-
   release:
-    name: Release
     runs-on: ubuntu-latest
-    needs: ci
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Version packages and update lockfile
+        run: |
+          npx changeset version
+          npm install
+
+      - name: Commit version bump
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add package.json package-lock.json CHANGELOG.md
+          git commit -m "chore: version packages [skip ci]" || echo "No changes"
+          git push --follow-tags
+
+      - name: Publish packages to npm
+        run: npx changeset publish --provenance
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create GitHub Release
         uses: changesets/action@v1
         with:
-          publish: changeset publish --provenance
+          publish: false
           createGithubReleases: true
-          title: "chore: release packages"
-          commit: "chore: release packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
