--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.6/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
 	"vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
 	"files": {
 		"ignoreUnknown": false,
@@ -27,7 +27,8 @@
 			},
 			"suspicious": {
 				"noExplicitAny": "off",
-				"noConsole": "warn"
+				"noConsole": "warn",
+				"noPrototypeBuiltins": "off"
 			},
 			"complexity": {
 				"noStaticOnlyClass": "off",
