--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,9 @@
-name: CI
+name: Build CI
 
 on:
-  workflow_call:
+  push:
+  pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Type check
-        run: npm run compile
-
-      - name: Run tests
-        run: npm run test
-
-      - name: Build
-        run: npm run build
+  ci:
+    uses: ./.github/workflows/test.yml
