--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,17 @@
-name: Build CI - Run Test
+name: Build CI
 
 on:
   push:
   pull_request:
 
-jobs:
-  check-changelog:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
+permissions:
+  contents: write
+  id-token: write
 
-      - name: Check 'CHANGELOG.MD' changed
-        id: changes
-        run: |
-          CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
-          echo "changed=$CHANGED" >> $GITHUB_OUTPUT
-          if echo "$CHANGED" | grep -q "CHANGELOG.md"; then
-            echo "CHANGELOG.md changed — skipping workflow"
-            exit 0
-          fi
-  ci:
-    needs: check-changelog
+jobs:
+  test:
     uses: ./.github/workflows/test.yml
+  publish-npm:
+    if: github.ref == 'refs/heads/main'
+    needs: test
+    uses: ./.github/workflows/publish.yml
