Refactors XmlComment to support targeted, multiple comments
Changes the comment decorator from a single global comment per class to element-specific comments that can be associated with particular properties. Each comment now requires a `targetProperty` parameter to specify which element it describes, enabling multiple comments per class.

Supports both string and string[] property types for flexible comment formatting. Multi-line comments are preserved during round-trip serialization/deserialization, with automatic splitting/joining based on property type.

Updates internal storage from single comment fields to an array-based structure, preventing duplicates and allowing multiple comment decorators. Comments now appear immediately before their target element in XML output using a special `?_elementName` key format.

Removes the Jest extension recommendation from workspace configuration.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-	"recommendations": [
-		"Orta.vscode-jest",
-		"YoavBls.pretty-ts-errors",
-		"biomejs.biome",
-		"christian-kohler.npm-intellisense"
-	]
+	"recommendations": ["YoavBls.pretty-ts-errors", "biomejs.biome", "christian-kohler.npm-intellisense"]
 }
