--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"dev": "tsc --watch",
 		"lint": "biome lint",
 		"prepare": "husky",
-		"test": "vitest",
+		"test": "vitest --run",
 		"test:coverage": "vitest --coverage",
 		"test:watch": "vitest --watch",
 		"update-all-packages": "npx npm-check-updates -u && npm i"
